--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,22 +1,41 @@
 @import 'table';
+@import 'variaveis';
 
 :host {
   display: flex;
   justify-content: space-between;
-}
+  background-color: #222;
 
-.minhas-musicas {
-  padding: 0px 50px;
-  padding-bottom: 20px;
-  width: 100%;
-  max-height: 100vh;
-  overflow-y: scroll;
-}
+  ::-webkit-scrollbar{
+      width: 7px;
 
-.d-block {
-  display: block;
-}
+    &-thumb {
+      background-color: rgba($cor-primaria, .2);
+      border-radius: 10px;
+    }
 
-.painel-direioto {
-  height: 100%;
+    &-track {
+      background: transparent;
+
+    }
+
+  }
+
+
+  .minhas-musicas {
+    padding: 0px 50px;
+    padding-bottom: 20px;
+    width: 100%;
+    max-height: 100vh;
+    overflow-y: scroll;
+  }
+
+  .d-block {
+    display: block;
+  }
+
+  .painel-direioto {
+    height: 100%;
+  }
+
 }
