--- a/src/assets/styles/table.scss
+++ b/src/assets/styles/table.scss
@@ -4,17 +4,27 @@
   width: 100%;
   text-align: left;
   table-layout: fixed;
-  border-collapse: separate;
+  border-collapse: collapse;
 
 .play {
   color: $cor-primaria;
   font-size: 1.5rem;
 }
 
+.executando {
+  background-color: rgb(31, 31, 30);
+  padding: 10px;
+  box-shadow: 0px 0px 15px $preto-transparent-30;
+
+  td {
+    color: $cor-primaria;
+  }
+}
+
 thead th {
   font-size: .75rem;
   font-weight: 600;
-  color: $preto-transparent-30;
+  color: #696969;
 
 }
 
@@ -43,7 +53,7 @@ tr {
       margin-top: 10px;
       font-weight: 500;
       font-size: .85rem;
-      color: $preto-transparent-70;
+      color: #fff;
 
       &:nth-child(1) {
         padding-left: 10px;
